<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">cartao_visita</string>
    <string name="label_novo_cartao">Novo Cartão</string>
    <string name="hint_nome">nome</string>
    <string name="hint_telefone">telefone</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_nome_da_empresa">nome da empresa</string>
    <string name="hint_cor">cor</string>
    <string name="hint_confirmar">confirmar</string>
    <string name="label_share_to">Compartilhar</string>
</resources>